* 2018.06.08 - [FGG] added xml module to validate XML files via DTD
               (needed to generate ACM DL proceedings for ReQuEST tournament)

* 2018.06.07 - [FGG] fixing GCC stdlib++ detection on Windows 
               (see https://github.com/BVLC/caffe/issues/5631#issuecomment-395323054)
             - [FGG] automatically generate _CYGWIN for _BIN,_LIB,_INCLUDE paths 
                     on Windows (useful to build Caffe)

* 2018.06.01 - [FGG] added support for os:android26* android27* and android28*
                     improved detection of correct Android NDK GCC

* 2018.05.30 - [FGG] fixed soft auto-detect when have no_tags (see #68)

* 2018.05.29 - [FGG] added "ck snapshot artifact --repo={name of repo}" to prepare a zip file
               with selected repo, all dependencies, ck-master and 2 scripts 
               to prepare virtual CK environment with repo snapshots 
               and to start a shell - needed to automatically prepare a snapshot of 
               CK ReQuEST workflows and artifacts for ACM Digital Library.

* 2018.05.24 - [FGG] added universal handling of templates for new entries in misc module

* 2018.05.21 - [FGG] added support for host separator via $#sep#$ in soft_file_universal

* 2018.05.16 - [FGG] added soft/package for spack: https://github.com/spack/spack

* 2018.05.15 - [FGG] added ImageNet train dataset package/soft

* 2018.05.14 - [FGG] moved here imagenet soft/packages for imagenet (aux,val) from ck-caffe
               to be able to reuse across different AI frameworks (TF, Caffe, Caffe2, MXNet, CNTK

* 2018.05.03 - added support to machine module (target configuration) for Apache AVRO farms of machines
               (to support ReQuEST submission)

* 2018.04.13 - added packages for LLVM 5.0.1 and 6.0.0, and fixed LLVM 4.x and 5.x for aarch64

* 2018.04.10 - added package:utils-unix-win-from-git-2.7.10 (see https://github.com/BVLC/caffe/issues/5654)